--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -43,3 +43,70 @@ header .container nav .menu-social img:hover {
   filter: brightness(90%);
   transform: translateY(-5%);
 }
+
+.s-hero {
+  background: url(../img/s-hero-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.s-hero .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.s-hero .container .title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 59.2rem;
+  margin-top: 24rem;
+  padding-bottom: 6rem;
+}
+
+.s-hero .container .title h1 {
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 6.4rem;
+  line-height: 7.7rem;
+  text-align: center;
+  color: var(--white-color);
+}
+
+.s-hero .container .title h1 span {
+  color: var(--primary-color);
+}
+
+.s-hero .container .title h2 {
+  font-weight: 400;
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 3.2rem;
+}
+
+.s-hero .container .title p {
+  font-weight: 400;
+  font-size: 1.8rem;
+  line-height: 2.7rem;
+  text-align: center;
+  color: rgba(220, 246, 75, 0.8);
+}
+
+.s-hero .container .title .techs {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.6rem;
+  margin-top: 2.3rem;
+}
+
+.s-hero .container .title .btn-primary {
+  margin-top: 4rem;
+  padding: 1rem 5.6rem;
+}
