--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -278,3 +278,18 @@ header .container nav .menu-social img:hover {
 .s-contact .container .form-contact .input-group textarea {
   margin-bottom: 0;
 }
+
+.input-button {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.s-contact .container .form-contact button {
+  border-radius: 2.4rem;
+  background-color: var(--primary-color);
+  padding: 1rem 2.4rem;
+  border: none;
+  margin-top: 1.7rem;
+  font-weight: 700;
+}
